--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-icons": "^5.5.0",
     "react-parallax-tilt": "^1.7.300",
     "react-scroll": "^1.9.3",
+    "tailwind-scrollbar-hide": "^4.0.0",
     "typewriter-effect": "^2.22.0"
   },
   "devDependencies": {
