--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "react-icons": "^5.5.0",
     "react-parallax-tilt": "^1.7.300",
     "react-scroll": "^1.9.3",
+    "react-slick": "^0.31.0",
     "simple-icons": "^15.11.0",
+    "slick-carousel": "^1.8.1",
     "tailwind-scrollbar-hide": "^4.0.0",
     "typewriter-effect": "^2.22.0"
   },
